--- a/assignment/index.html
+++ b/assignment/index.html
@@ -1,1 +1,61 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset ="UTF-8">
+<meta name= "viewport" content= "width=device-width", initial-scale=1.0">
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="css/all.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!---custom css--->
+<link rel="stylesheet" href="css/style.css">
 
+<title>assignment</title>
+
+</head>
+
+<body>
+
+<!---Start Navigation--->
+
+<nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #0e076d;">
+  <a class="navbar-brand" href="#">rent by owner</a>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <ul class="navbar-nav custom-nav ml-auto">
+      <li class= "nav-item custom-nav-item"><a href="#" class="nav-link">Rentals<i class="fa fa-angle-down"></i></a></li>
+      <li class= "nav-item custom-nav-item"><a href="#" class="nav-link">Nearby<i class="fa fa-angle-down"></i></a></li>
+      <li class= "nav-item custom-nav-item"><a href="#" class="nav-link">Destinations<i class="fa fa-angle-down"></i></a></li>
+      <li class= "nav-item custom-nav-item"><a href="#" class="button">Find a Vacation Rental</a></li>
+    </ul>
+  </div>
+</nav>
+
+<!---end Navigation--->
+<div class="container">
+    <div class="row">
+      <div class="col-lg-12" style="background-color:rgb(71, 10, 10); background-image: url('image/images.jpg');  background-repeat: no-repeat; background-size: cover">
+        <p>Lorem ipsum...</p>
+      </div>
+    </div>
+  </div>
+
+<!---start background--->
+
+<!---end background--->
+
+<!---start about section--->
+
+<!---end about section--->
+
+<!---start footer--->
+
+<!---end footer--->
+
+
+<script src="js/jquery.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/all.min.js"></script>
+<script type="text/javascript" src="js/ajaxrequest.js"></script>
+
+</body>
+</html>
